Work in progress

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,6 +13,4 @@ Digits.java.math.BigDecimal=Your provided value is out of the valid range\: <{2}
 pagination.previous=Previous
 pagination.next=Next
 pagination.elements=Item {0} of {1}
-searchFilter.apply=Apply
-department.person.department.referenced=This entity is still referenced by User {0, number, \#} via field Department.
-role.user.role.referenced=This entity is still referenced by User {0, number, \#} via field Role.
+businessApp.credential.referenced=This entity is still referenced by Application {0, number, \#} via field Credential.
