Work in progress

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,9 +3,9 @@ operation.success=Your operation was successful.
 NotNull=Please provide a value.
 Email=Please provide a valid e-mail address.
 Size.java.lang.String=Your value must have a length between {2} and {1} characters.
-typeMismatch.java.time.LocalDate=Please provide a valid date, for example "1996-01-23".
-typeMismatch.java.time.LocalDateTime=Please provide a valid date and time, for example "1996-01-23T14\:55\:00".
-typeMismatch.java.time.OffsetDateTime=Please provide a valid date with offset, for example "2026-01-23T14\:55\:00+01\:00".
+typeMismatch.java.time.LocalDate=Please provide a valid date, for example, "1996-01-23".
+typeMismatch.java.time.LocalDateTime=Please provide a valid date and time, for example, "1996-01-23T14\:55\:00".
+typeMismatch.java.time.OffsetDateTime=Please provide a valid date with an offset, for example, "2026-01-23T14\:55\:00+01\:00".
 typeMismatch.java.lang.Integer=Please provide a valid whole number.
 typeMismatch.java.util.UUID=Please provide a valid UUID, for example "e59130d4-e1e4-352f-8a99-72e5507489a8".
 typeMismatch.java.math.BigDecimal=Please provide a valid numeric number.
