Several bug fixes and full support for versioning

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,4 @@
 delete.confirm=Do you really want to delete this element? This cannot be undone.
-operation.success=Your operation was successful.
 NotNull=Please provide a value.
 Email=Please provide a valid e-mail address.
 Size.java.lang.String=Your value must have a length between {2} and {1} characters.
@@ -10,7 +9,4 @@ typeMismatch.java.lang.Integer=Please provide a valid whole number.
 typeMismatch.java.util.UUID=Please provide a valid UUID, for example "e59130d4-e1e4-352f-8a99-72e5507489a8".
 typeMismatch.java.math.BigDecimal=Please provide a valid numeric number.
 Digits.java.math.BigDecimal=Your provided value is out of the valid range\: <{2} digits>.<{1} digits> expected.
-pagination.previous=Previous
-pagination.next=Next
-pagination.elements=Item {0} of {1}
-businessApp.credential.referenced=This entity is still referenced by Application {0, number, \#} via field Credential.
+businessApp.credential.referenced=This entity is still referenced by Credential {0, number, \#} via field Application.
